# picasso-dashboard

./: CMakeLists.txt  README.md
dashboard/: AppContext.cpp  AppContext.h  CMakeLists.txt  MessageBox.qml  OBDDevice.cpp  OBDDevice.h  RpmDial.qml  main.cpp  qml.qrc
